# data-janitor-env

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  app.py  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  setup.py  tasks.py
server/: app.py
