[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "data-janitor-env"
version = "1.0.0"
description = "OpenEnv-compliant data engineering environment for Meta Hack competition"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Data Janitor Team"}
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "openai>=1.3.0",
    "python-dotenv>=1.0.0",
    "openenv-core>=0.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=5.0"
]

[tool.setuptools]
packages = ["server"]

[project.scripts]
server = "server.app:main"

[project.urls]
Homepage = "https://github.com/Gautam0898/data-janitor-env"
Repository = "https://github.com/Gautam0898/data-janitor-env"
